# mrz-recognizer

./: main.py  pyproject.toml  requirements  run.sh
recognizer/: __init__.py  countries_codes.json  iso-country-codes.csv  mrz_recognizer.py  test.py
training_data/: mrz11.gt.txt  mrz11.tif  mrz11_1.gt.txt  mrz11_1.tif  mrz12.gt.txt  mrz12.tif  mrz12_1.gt.txt  mrz12_1.tif  mrz15.gt.txt  mrz15.tif  mrz15_1.gt.txt  mrz15_1.tif  mrz16.gt.txt  mrz16.tif  mrz16_1.gt.txt  mrz16_1.tif  mrz17.gt.txt  mrz17.tif  mrz17_1.gt.txt  mrz17_1.tif  mrz2.gt.txt  mrz2.tif  mrz20.gt.txt  mrz20.tif  mrz20_1.gt.txt  mrz20_1.tif  mrz22.gt.txt  mrz22.tif  mrz22_1.gt.txt  mrz22_1.tif  mrz2_1.gt.txt  mrz2_1.tif  mrz3.gt.txt  mrz3.tif  mrz3_1.gt.txt  mrz3_1.tif  mrz4.gt.txt  mrz4.tif  mrz4_1.gt.txt  mrz4_1.tif  (+20 more)
